[package]
description = "Async circular queue that removes old items in favor of new ones on overflow"
edition = "2021"
license = "MIT"
name = "jormungand"
version = "0.0.1"

[dependencies]
ringbuffer = "0.10.0"
parking_lot = "0.12.1"

[dev-dependencies]
tokio = { version = "*", features = ["full"] }