[package]
description = "Async circular queue that replaces old items with new ones on overflow"
edition = "2021"
license = "MIT"
name = "jormungand"
version = "0.0.2"

[dependencies]
ringbuffer = "0.10.0"
parking_lot = "0.12.1"

[dev-dependencies]
tokio = { version = "1.22.0", features = ["full"] }