[package]
description = "Async and thread safe circular buffer that rewrites old items on overflow"
edition = "2021"
license = "MIT"
name = "jormungand"
version = "0.0.3"

[dependencies]
parking_lot = "0.12.1"
ringbuffer = "0.10.0"

[dev-dependencies]
tokio = { version = "1.22.0", features = ["full"] }